# dragonfly

./: .gitignore  design.md  design_decisions.md  development_approach.md  pyproject.toml  readme.md  requirements.md
docs/phase1/: README.md  acceptance-criteria.md  example-scenarios.md  implementation-plan.md  test-plan.md
src/dragonfly/core/: graph.py  nodes.py  synth.py  types.py
src/dragonfly/service/api/: main.py  routes.py
src/dragonfly/service/runtime/: langgraph_runner.py
tests/: test_architecture.py  test_decisions.py
tests/integration/: test_api.py
tests/unit/core/: test_graph.py  test_imports.py  test_nodes.py  test_synth.py  test_types.py
tests/unit/service/: test_langgraph_runner.py
